# Prusa-Firmware

./: .gitignore  CMakeLists.txt  Community_made.md  MK404-build.sh  README.md  build.sh  clean.sh
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  community.yml  enhancement.md  enhancement.yml  feature_request.md  feature_request.yml
.github/workflows/: stale.yml
Firmware/: Configuration.h  ConfigurationStore.cpp  ConfigurationStore.h  Configuration_adv.h  Configuration_prusa.h  Dcodes.cpp  Dcodes.h  Filament_sensor.cpp  Filament_sensor.h  Marlin.h  MarlinSerial.cpp  MarlinSerial.h  Marlin_main.cpp  Prusa_farm.cpp  Sd2Card.cpp  Sd2Card.h  SdBaseFile.cpp  SdBaseFile.h  SdFatUtil.cpp  SdFile.cpp  SdFile.h  Servo.cpp  Tcodes.cpp  backlight.cpp  cardreader.cpp  cardreader.h  cmdqueue.cpp  cmdqueue.h  config.h  eeprom.cpp  eeprom.h  fancheck.cpp  fastio.h  first_lay_cal.cpp  fsensor.cpp  heatbed_pwm.cpp  language.c  language.h  lcd.cpp  lcd.h  (+55 more)
Firmware/mmu2/: errors_list.h
Firmware/variants/: 1_75mm_MK2-RAMBo10a-E3Dv6full.h  1_75mm_MK2-RAMBo13a-E3Dv6full.h  1_75mm_MK25-RAMBo10a-E3Dv6full.h  1_75mm_MK25-RAMBo13a-E3Dv6full.h  1_75mm_MK25S-RAMBo10a-E3Dv6full.h  1_75mm_MK25S-RAMBo13a-E3Dv6full.h  1_75mm_MK3-EINSy10a-E3Dv6full.h  1_75mm_MK3S-EINSy10a-E3Dv6full.h  MK25-RAMBo10a.h  MK25-RAMBo13a.h  MK25S-RAMBo10a.h  MK25S-RAMBo13a.h  MK3-E3DREVO.h  MK3-E3DREVO_HF_60W.h  MK3.h  MK3S-E3DREVO.h  MK3S-E3DREVO_HF_60W.h  MK3S.h
Firmware/variants/obsolete/: 1_75mm_MK2-RAMBo10a-E3Dv6full.h  1_75mm_MK2-RAMBo13a-E3Dv6full.h
cmake/: Check_lang_size.cmake  GetGitRevisionDescription.cmake  Utilities.cmake
lang/: Community_made_translations.md  README.md  fw-build.sh  lang_en_fr.txt
lang/lib/: FontGen.py  charset.py
lang/po/: Firmware.pot  Firmware_cs.po  Firmware_de.po  Firmware_es.po  Firmware_fr.po  Firmware_hr.po  Firmware_hu.po  Firmware_it.po  Firmware_nl.po  Firmware_no.po  Firmware_pl.po  Firmware_ro.po  Firmware_sk.po  Firmware_sv.po
lib/Catch2/: CMakeLists.txt  CMakePresets.json  appveyor.yml
lib/Catch2/.github/: pull_request_template.md
lib/Catch2/extras/: CatchShardTests.cmake
lib/Catch2/src/: CMakeLists.txt
lib/Catch2/tests/ExtraTests/: X10-FallbackStringifier.cpp
lib/Catch2/tools/scripts/: checkLicense.py  extractFeaturesFromReleaseNotes.py
tests/: CMakeLists.txt  Example_test.cpp  PrusaStatistics_test.cpp
utils/: bootstrap.py
