cmake_minimum_required(VERSION 3.18)
project(Prusa_Firmware_3_9_2)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories(Catch2)
include_directories(Firmware)
include_directories(lang)
include_directories(Tests)

add_executable(Prusa_Firmware_3_9_2
        Catch2/catch.hpp
        Firmware/Configuration_prusa.h
        Firmware/adc.c
        Firmware/adc.h
        Firmware/AutoDeplete.cpp
        Firmware/AutoDeplete.h
        Firmware/backlight.cpp
        Firmware/backlight.h
        Firmware/BlinkM.cpp
        Firmware/BlinkM.h
        Firmware/boards.h
        Firmware/bootapp.c
        Firmware/bootapp.h
        Firmware/cardreader.cpp
        Firmware/cardreader.h
        Firmware/cmdqueue.cpp
        Firmware/cmdqueue.h
        Firmware/config.h
        Firmware/Configuration.cpp
        Firmware/Configuration.h
        Firmware/Configuration_adv.h
        Firmware/ConfigurationStore.cpp
        Firmware/ConfigurationStore.h
        Firmware/conv2str.cpp
        Firmware/conv2str.h
        Firmware/Dcodes.cpp
        Firmware/Dcodes.h
        Firmware/doxyfile
        Firmware/eeprom.cpp
        Firmware/eeprom.h
        Firmware/fastio.h
        Firmware/Firmware.ino
        Firmware/first_lay_cal.cpp
        Firmware/first_lay_cal.h
        Firmware/fsensor.cpp
        Firmware/fsensor.h
        Firmware/heatbed_pwm.cpp
        Firmware/io_atmega2560.h
        Firmware/la10compat.cpp
        Firmware/la10compat.h
        Firmware/language.c
        Firmware/language.h
        Firmware/lcd.cpp
        Firmware/lcd.h
        Firmware/le.sh
        Firmware/Marlin.h
        Firmware/Marlin_main.cpp
        Firmware/MarlinSerial.cpp
        Firmware/MarlinSerial.h
        Firmware/menu.cpp
        Firmware/menu.h
        Firmware/mesh_bed_calibration.cpp
        Firmware/mesh_bed_calibration.h
        Firmware/mesh_bed_leveling.cpp
        Firmware/mesh_bed_leveling.h
        Firmware/messages.c
        Firmware/messages.h
        Firmware/mmu.cpp
        Firmware/mmu.h
        Firmware/motion_control.cpp
        Firmware/motion_control.h
        Firmware/optiboot_w25x20cl.cpp
        Firmware/optiboot_w25x20cl.h
        Firmware/pat9125.c
        Firmware/pat9125.h
        Firmware/pins.h
        Firmware/pins_Einsy_1_0.h
        Firmware/pins_Rambo_1_0.h
        Firmware/pins_Rambo_1_3.h
        Firmware/planner.cpp
        Firmware/planner.h
        Firmware/printers.h
        Firmware/qr_solve.cpp
        Firmware/qr_solve.h
        Firmware/rbuf.c
        Firmware/rbuf.h
        Firmware/Sd2Card.cpp
        Firmware/Sd2Card.h
        Firmware/Sd2PinMap.h
        Firmware/SdBaseFile.cpp
        Firmware/SdBaseFile.h
        Firmware/SdFatConfig.h
        Firmware/SdFatStructs.h
        Firmware/SdFatUtil.cpp
        Firmware/SdFatUtil.h
        Firmware/SdFile.cpp
        Firmware/SdFile.h
        Firmware/SdInfo.h
        Firmware/SdVolume.cpp
        Firmware/SdVolume.h
        Firmware/Servo.cpp
        Firmware/Servo.h
        Firmware/sm4.c
        Firmware/sm4.h
        Firmware/sound.cpp
        Firmware/sound.h
        Firmware/speed_lookuptable.cpp
        Firmware/speed_lookuptable.h
        Firmware/spi.c
        Firmware/spi.h
        Firmware/static_assert.h
        Firmware/stepper.cpp
        Firmware/stepper.h
        Firmware/stk500.h
        Firmware/swi2c.c
        Firmware/swi2c.h
        Firmware/swspi.cpp
        Firmware/swspi.h
        Firmware/system_timer.h
        Firmware/temperature.cpp
        Firmware/temperature.h
        Firmware/thermistortables.h
        Firmware/Timer.cpp
        Firmware/Timer.h
        Firmware/timer02.c
        Firmware/timer02.h
        Firmware/TimerRemaining.h
        Firmware/tmc2130.cpp
        Firmware/tmc2130.h
        Firmware/tone04.c
        Firmware/tone04.h
        Firmware/uart2.c
        Firmware/uart2.h
        Firmware/ultralcd.cpp
        Firmware/ultralcd.h
        Firmware/uni_avr_rpi.h
        Firmware/util.cpp
        Firmware/util.h
        Firmware/vector_3.cpp
        Firmware/vector_3.h
        Firmware/w25x20cl.c
        Firmware/w25x20cl.h
        Firmware/xyzcal.cpp
        Firmware/xyzcal.h
        lang/po/new/cs.po
        lang/po/new/de.po
        lang/po/new/es.po
        lang/po/new/fr.po
        lang/po/new/it.po
        lang/po/new/pl.po
        lang/po/Firmware.pot
        lang/po/Firmware_cs.po
        lang/po/Firmware_de.po
        lang/po/Firmware_es.po
        lang/po/Firmware_fr.po
        lang/po/Firmware_it.po
        lang/po/Firmware_pl.po
        lang/config.sh
        lang/fw-build.sh
        lang/fw-clean.sh
        lang/iso639-1.txt
        lang/lang-add.sh
        lang/lang-build.sh
        lang/lang-check.py
        lang/lang-check.sh
        lang/lang-clean.sh
        lang/lang-export.sh
        lang/lang-import.sh
        lang/lang_en.txt
        lang/lang_en_cz.txt
        lang/lang_en_de.txt
        lang/lang_en_es.txt
        lang/lang_en_fr.txt
        lang/lang_en_it.txt
        lang/lang_en_pl.txt
        lang/progmem.sh
        lang/readme.txt
        lang/textaddr.sh
        lang/translations.md
        lang/update_lang.sh
        Tests/Arduino.h
        Tests/AutoDeplete_test.cpp
        Tests/Example_test.cpp
        Tests/PrusaStatistics_test.cpp
        Tests/tests.cpp
        Tests/Timer_test.cpp
        build.sh
        CMakeLists.txt
        LICENSE
        PF-build.sh
        prepare_winbuild.ps1
        README.md
        README_cz.md
        test.sh)
